--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
     "name": "livioribeiro/reactmvc",
+    "authors": [
+        {
+            "name": "Livio Ribeiro",
+            "email": "livioribeiro@outlook.com"
+        }
+    ],
+    "license": "BSD-3-Clause",
     "version": "0.1.0",
+    "type": "library",
     "require": {
         "php": ">=5.6.0",
         "react/http": "^0.4",
@@ -18,7 +26,7 @@
     },
     "autoload": {
         "psr-4": {
-            "ReactMVC\\": "src/"
+            "ReactMVC\\": "src/ReactMVC"
         }
     }
 }
